# gin-server/service/system/sys_user.go
@@ -2,27 +2,35 @@ package system
 
 import (
 	"gin-server/global"
-	"gin-server/model/system"
+	model "gin-server/model/system"
 	"gin-server/util"
 )
 
-func Register(u system.SysUser) (err error, userInter system.SysUser) {
-	// 否则 附加uuid 密码md5简单加密 注册
+func AddSysUser(u model.SysUser) (err error) {
 	u.Password = util.MD5V([]byte(u.Salt + u.Password))
 	err = global.DB.Create(&u).Error
-	return err, u
+	return err
 }
 
-func Login(u system.SysUser) (err error, userInter system.SysUser) {
-	var user system.SysUser
-	err = global.DB.Where("username = ?", u.Username).First(&user).Error
+func GetSysUserByUsername(username string) (err error, userInter model.SysUser) {
+	var user model.SysUser
+	err = global.DB.Where("username = ?", username).First(&user).Error
 	return err, user
 }
 
-func GetSysUserById(id uint) (err error, userInter system.SysUser) {
-	var user system.SysUser
+func GetSysUserById(id uint) (err error, userInter model.SysUser) {
+	var user model.SysUser
 	err = global.DB.Where("id = ?", id).First(&user).Error
-	user.Password = ""
-	user.Salt = ""
 	return err, user
+}
+
+func UpdateSysUser(u model.SysUser) (err error) {
+	u.Password = util.MD5V([]byte(u.Salt + u.Password))
+	err = global.DB.Save(&u).Error
+	return err
+}
+
+func DeleteSysUser(u model.SysUser) (err error) {
+	err = global.DB.Delete(&u).Error
+	return err
 }
